--- a/ultralytics/cfg/datasets/Objects365v1.yaml
+++ b/ultralytics/cfg/datasets/Objects365v1.yaml
@@ -3,368 +3,368 @@ train: images/train
 val: null
 test: null
 names:
-  0: person
-  1: sneakers
-  2: chair
-  3: hat
-  4: lamp
-  5: bottle
-  6: cabinet/shelf
-  7: cup
-  8: car
-  9: glasses
-  10: picture/frame
-  11: desk
-  12: handbag
-  13: street lights
-  14: book
-  15: plate
-  16: helmet
-  17: leather shoes
-  18: pillow
-  19: glove
-  20: potted plant
-  21: bracelet
-  22: flower
-  23: tv
-  24: storage box
-  25: vase
-  26: bench
-  27: wine glass
-  28: boots
-  29: bowl
-  30: dining table
-  31: umbrella
-  32: boat
-  33: flag
-  34: speaker
-  35: trash bin/can
-  36: stool
-  37: backpack
-  38: couch
-  39: belt
-  40: carpet
-  41: basket
-  42: towel/napkin
-  43: slippers
-  44: barrel/bucket
-  45: coffee table
-  46: suv
-  47: toy
-  48: tie
-  49: bed
-  50: traffic light
-  51: pen/pencil
-  52: microphone
-  53: sandals
-  54: canned
-  55: necklace
-  56: mirror
-  57: faucet
-  58: bicycle
-  59: bread
-  60: high heels
-  61: ring
-  62: van
-  63: watch
-  64: sink
-  65: horse
-  66: fish
-  67: apple
-  68: camera
-  69: candle
-  70: teddy bear
-  71: cake
-  72: motorcycle
-  73: wild bird
-  74: laptop
-  75: knife
-  76: traffic sign
-  77: cell phone
-  78: paddle
-  79: truck
-  80: cow
-  81: power outlet
-  82: clock
-  83: drum
-  84: fork
-  85: bus
-  86: hanger
-  87: nightstand
-  88: pot/pan
-  89: sheep
-  90: guitar
-  91: traffic cone
-  92: tea pot
-  93: keyboard
-  94: tripod
-  95: hockey
-  96: fan
-  97: dog
-  98: spoon
-  99: blackboard/whiteboard
-  100: balloon
-  101: air conditioner
-  102: cymbal
-  103: mouse
-  104: telephone
-  105: pickup truck
-  106: orange
-  107: banana
-  108: airplane
-  109: luggage
-  110: skis
-  111: soccer
-  112: trolley
-  113: oven
-  114: remote
-  115: baseball glove
-  116: paper towel
-  117: refrigerator
-  118: train
-  119: tomato
-  120: machinery vehicle
-  121: tent
-  122: shampoo/shower gel
-  123: head phone
-  124: lantern
-  125: donut
-  126: cleaning products
-  127: sailboat
-  128: tangerine
-  129: pizza
-  130: kite
-  131: computer box
-  132: elephant
-  133: toiletries
-  134: gas stove
-  135: broccoli
-  136: toilet
-  137: stroller
-  138: shovel
-  139: baseball bat
-  140: microwave
-  141: skateboard
-  142: surfboard
-  143: surveillance camera
-  144: gun
-  145: life saver
-  146: cat
-  147: lemon
-  148: liquid soap
-  149: zebra
-  150: duck
-  151: sports car
-  152: giraffe
-  153: pumpkin
-  154: piano
-  155: stop sign
-  156: radiator
-  157: converter
-  158: tissue
-  159: carrot
-  160: washing machine
-  161: vent
-  162: cookies
-  163: cutting/chopping board
-  164: tennis racket
-  165: candy
-  166: skating and skiing shoes
-  167: scissors
-  168: folder
-  169: baseball
-  170: strawberry
-  171: bow tie
-  172: pigeon
-  173: pepper
-  174: coffee machine
-  175: bathtub
-  176: snowboard
-  177: suitcase
-  178: grapes
-  179: ladder
-  180: pear
-  181: american football
-  182: basketball
-  183: potato
-  184: paint brush
-  185: printer
-  186: billiards
-  187: fire hydrant
-  188: goose
-  189: projector
-  190: sausage
-  191: fire extinguisher
-  192: extension cord
-  193: facial mask
-  194: tennis ball
-  195: chopsticks
-  196: electronic stove and gas stove
-  197: pie
-  198: frisbee
-  199: kettle
-  200: hamburger
-  201: golf club
-  202: cucumber
-  203: clutch
-  204: blender
-  205: tong
-  206: slide
-  207: hot dog
-  208: toothbrush
-  209: facial cleanser
-  210: mango
-  211: deer
-  212: egg
-  213: violin
-  214: marker
-  215: ship
-  216: chicken
-  217: onion
-  218: ice cream
-  219: tape
-  220: wheelchair
-  221: plum
-  222: bar soap
-  223: scale
-  224: watermelon
-  225: cabbage
-  226: router/modem
-  227: golf ball
-  228: pine apple
-  229: crane
-  230: fire truck
-  231: peach
-  232: cello
-  233: notepaper
-  234: tricycle
-  235: toaster
-  236: helicopter
-  237: green beans
-  238: brush
-  239: carriage
-  240: cigar
-  241: earphone
-  242: penguin
-  243: hurdle
-  244: swing
-  245: radio
-  246: cd
-  247: parking meter
-  248: swan
-  249: garlic
-  250: french fries
-  251: horn
-  252: avocado
-  253: saxophone
-  254: trumpet
-  255: sandwich
-  256: cue
-  257: kiwi fruit
-  258: bear
-  259: fishing rod
-  260: cherry
-  261: tablet
-  262: green vegetables
-  263: nuts
-  264: corn
-  265: key
-  266: screwdriver
-  267: globe
-  268: broom
-  269: pliers
-  270: volleyball
-  271: hammer
-  272: eggplant
-  273: trophy
-  274: dates
-  275: board eraser
-  276: rice
-  277: tape measure/ruler
-  278: dumbbell
-  279: hamimelon
-  280: stapler
-  281: camel
-  282: lettuce
-  283: goldfish
-  284: meat balls
-  285: medal
-  286: toothpaste
-  287: antelope
-  288: shrimp
-  289: rickshaw
-  290: trombone
-  291: pomegranate
-  292: coconut
-  293: jellyfish
-  294: mushroom
-  295: calculator
-  296: treadmill
-  297: butterfly
-  298: egg tart
-  299: cheese
-  300: pig
-  301: pomelo
-  302: race car
-  303: rice cooker
-  304: tuba
-  305: crosswalk sign
-  306: papaya
-  307: hair drier
-  308: green onion
-  309: chips
-  310: dolphin
-  311: sushi
-  312: urinal
-  313: donkey
-  314: electric drill
-  315: spring rolls
-  316: tortoise/turtle
-  317: parrot
-  318: flute
-  319: measuring cup
-  320: shark
-  321: steak
-  322: poker card
-  323: binoculars
-  324: llama
-  325: radish
-  326: noodles
-  327: yak
-  328: mop
-  329: crab
-  330: microscope
-  331: barbell
-  332: bread/bun
-  333: baozi
-  334: lion
-  335: red cabbage
-  336: polar bear
-  337: lighter
-  338: seal
-  339: mangosteen
-  340: comb
-  341: eraser
-  342: pitaya
-  343: scallop
-  344: pencil case
-  345: saw
-  346: table tennis paddle
-  347: okra
-  348: starfish
-  349: eagle
-  350: monkey
-  351: durian
-  352: game board
-  353: rabbit
-  354: french horn
-  355: ambulance
-  356: asparagus
-  357: hoverboard
-  358: pasta
-  359: target
-  360: hotair balloon
-  361: chainsaw
-  362: lobster
-  363: iron
-  364: flashlight
+  0: 사람
+  1: 운동화
+  2: 의자
+  3: 모자
+  4: 램프
+  5: 병
+  6: 캐비닛/선반
+  7: 컵
+  8: 자동차
+  9: 안경
+  10: 그림/액자
+  11: 책상
+  12: 핸드백
+  13: 가로등
+  14: 책
+  15: 접시
+  16: 헬멧
+  17: 가죽 구두
+  18: 베개
+  19: 장갑
+  20: 화분/화초
+  21: 팔찌
+  22: 꽃
+  23: TV
+  24: 수납함
+  25: 꽃병
+  26: 벤치
+  27: 와인잔
+  28: 부츠
+  29: 그릇/볼
+  30: 식탁
+  31: 우산
+  32: 보트
+  33: 깃발
+  34: 스피커
+  35: 쓰레기통
+  36: 스툴(등받이 없는 의자)
+  37: 백팩
+  38: 소파
+  39: 벨트
+  40: 카펫/양탄자
+  41: 바구니
+  42: 수건/냅킨
+  43: 슬리퍼
+  44: 통/버킷
+  45: 커피 테이블
+  46: SUV
+  47: 장난감
+  48: 넥타이
+  49: 침대
+  50: 신호등
+  51: 펜/연필
+  52: 마이크
+  53: 샌들
+  54: 통조림
+  55: 목걸이
+  56: 거울
+  57: 수도꼭지
+  58: 자전거
+  59: 빵
+  60: 하이힐
+  61: 반지
+  62: 밴
+  63: 시계
+  64: 싱크대
+  65: 말
+  66: 물고기
+  67: 사과
+  68: 카메라
+  69: 촛불/양초
+  70: 곰인형
+  71: 케이크
+  72: 오토바이
+  73: 야생 조류
+  74: 노트북
+  75: 칼
+  76: 교통 표지판
+  77: 휴대전화
+  78: 노(패들)
+  79: 트럭
+  80: 소
+  81: 콘센트
+  82: 시계
+  83: 드럼
+  84: 포크
+  85: 버스
+  86: 옷걸이
+  87: 협탁
+  88: 냄비/팬
+  89: 양
+  90: 기타
+  91: 주황색 원뿔/교통콘
+  92: 찻주전자
+  93: 키보드
+  94: 삼각대
+  95: 하키(스틱)
+  96: 선풍기
+  97: 개
+  98: 숟가락
+  99: 칠판/화이트보드
+  100: 풍선
+  101: 에어컨
+  102: 심벌즈
+  103: 마우스
+  104: 전화기
+  105: 픽업트럭
+  106: 오렌지
+  107: 바나나
+  108: 비행기
+  109: 여행가방
+  110: 스키
+  111: 축구공
+  112: 트롤리/카트
+  113: 오븐
+  114: 리모컨
+  115: 야구 글러브
+  116: 키친타월
+  117: 냉장고
+  118: 기차
+  119: 토마토
+  120: 건설 기계
+  121: 텐트
+  122: 샴푸/샤워젤
+  123: 헤드폰
+  124: 랜턴
+  125: 도넛
+  126: 청소용품
+  127: 범선/요트
+  128: 귤/한라봉
+  129: 피자
+  130: 연
+  131: 컴퓨터 본체
+  132: 코끼리
+  133: 세면용품
+  134: 가스레인지
+  135: 브로콜리
+  136: 변기
+  137: 유모차
+  138: 삽
+  139: 야구 방망이
+  140: 전자레인지
+  141: 스케이트보드
+  142: 서핑보드
+  143: CCTV
+  144: 총
+  145: 구명 튜브
+  146: 고양이
+  147: 레몬
+  148: 액체 비누
+  149: 얼룩말
+  150: 오리
+  151: 스포츠카
+  152: 기린
+  153: 호박
+  154: 피아노
+  155: 정지 표지판
+  156: 라디에이터
+  157: 컨버터
+  158: 티슈
+  159: 당근
+  160: 세탁기
+  161: 환풍구
+  162: 쿠키
+  163: 도마
+  164: 테니스 라켓
+  165: 사탕
+  166: 스케이트/스키 신발
+  167: 가위
+  168: 폴더
+  169: 야구공
+  170: 딸기
+  171: 나비넥타이
+  172: 비둘기
+  173: 피망/고추
+  174: 커피머신
+  175: 욕조
+  176: 스노우보드
+  177: 여행용 가방
+  178: 포도
+  179: 사다리
+  180: 배(과일)
+  181: 미식축구공
+  182: 농구공
+  183: 감자
+  184: 붓
+  185: 프린터
+  186: 당구대/당구
+  187: 소화전
+  188: 거위
+  189: 프로젝터
+  190: 소시지
+  191: 소화기
+  192: 연장선
+  193: 마스크팩
+  194: 테니스공
+  195: 젓가락
+  196: 전기/가스레인지
+  197: 파이
+  198: 프리스비
+  199: 주전자
+  200: 햄버거
+  201: 골프채
+  202: 오이
+  203: 클러치백
+  204: 믹서기
+  205: 집게
+  206: 미끄럼틀
+  207: 핫도그
+  208: 칫솔
+  209: 폼클렌저
+  210: 망고
+  211: 사슴
+  212: 달걀
+  213: 바이올린
+  214: 마커
+  215: 선박/배
+  216: 닭
+  217: 양파
+  218: 아이스크림
+  219: 테이프
+  220: 휠체어
+  221: 자두
+  222: 비누
+  223: 체중계
+  224: 수박
+  225: 양배추
+  226: 공유기/모뎀
+  227: 골프공
+  228: 파인애플
+  229: 크레인
+  230: 소방차
+  231: 복숭아
+  232: 첼로
+  233: 메모지
+  234: 세발자전거
+  235: 토스터
+  236: 헬리콥터
+  237: 콩/강낭콩
+  238: 솔(브러쉬)
+  239: 마차
+  240: 시가
+  241: 이어폰
+  242: 펭귄
+  243: 허들
+  244: 그네
+  245: 라디오
+  246: CD
+  247: 주차 미터기
+  248: 백조
+  249: 마늘
+  250: 감자튀김
+  251: 뿔/혼
+  252: 아보카도
+  253: 색소폰
+  254: 트럼펫
+  255: 샌드위치
+  256: 큐대(당구채)
+  257: 키위
+  258: 곰
+  259: 낚싯대
+  260: 체리
+  261: 태블릿
+  262: 채소
+  263: 견과류
+  264: 옥수수
+  265: 열쇠
+  266: 드라이버
+  267: 지구본
+  268: 빗자루
+  269: 펜치
+  270: 배구공
+  271: 망치
+  272: 가지
+  273: 트로피
+  274: 대추야자
+  275: 칠판 지우개
+  276: 밥/쌀
+  277: 줄자/자
+  278: 아령
+  279: 하미멜론
+  280: 스테이플러
+  281: 낙타
+  282: 상추
+  283: 금붕어
+  284: 미트볼
+  285: 메달
+  286: 치약
+  287: 영양
+  288: 새우
+  289: 릭샤/인력거
+  290: 트롬본
+  291: 석류
+  292: 코코넛
+  293: 해파리
+  294: 버섯
+  295: 계산기
+  296: 러닝머신
+  297: 나비
+  298: 에그타르트
+  299: 치즈
+  300: 돼지
+  301: 자몽
+  302: 레이스카
+  303: 밥솥
+  304: 튜바
+  305: 횡단보도 표지판
+  306: 파파야
+  307: 헤어드라이어
+  308: 대파
+  309: 감자칩/스낵
+  310: 돌고래
+  311: 스시
+  312: 소변기
+  313: 당나귀
+  314: 전동드릴
+  315: 춘권
+  316: 거북이
+  317: 앵무새
+  318: 플루트
+  319: 계량컵
+  320: 상어
+  321: 스테이크
+  322: 포커카드
+  323: 쌍안경
+  324: 라마
+  325: 무
+  326: 국수/면
+  327: 야크
+  328: 대걸레
+  329: 게
+  330: 현미경
+  331: 바벨
+  332: 빵/번
+  333: 바오쯔(중국식 찐빵)
+  334: 사자
+  335: 적양배추
+  336: 북극곰
+  337: 라이터
+  338: 바다표범
+  339: 망고스틴
+  340: 빗
+  341: 지우개
+  342: 용과(드래곤프루트)
+  343: 가리비
+  344: 필통
+  345: 톱
+  346: 탁구채
+  347: 오크라
+  348: 불가사리
+  349: 독수리
+  350: 원숭이
+  351: 두리안
+  352: 게임보드
+  353: 토끼
+  354: 프렌치호른
+  355: 구급차
+  356: 아스파라거스
+  357: 호버보드
+  358: 파스타
+  359: 과녁
+  360: 열기구
+  361: 전기톱
+  362: 바닷가재
+  363: 다리미
+  364: 손전등
